syntax = "proto3";

package v1;

import "api/v1/empty.proto";
import weak "google/api/annotations.proto";
import "storage/runtime_filters.proto";

option go_package = "v1";
option java_package = "io.stackrox.proto.api.v1";

message GetCollectorRuntimeConfigurationResponse {
  storage.RuntimeFilteringConfiguration collector_runtime_configuration = 1;
}

// CollectorRuntimeConfigurationService can be used to update and check the Collector runtime configuration
service CollectorRuntimeConfigurationService {
  rpc GetCollectorRuntimeConfiguration(Empty) returns (GetCollectorRuntimeConfigurationResponse) {
    option (google.api.http) = {get: "/v1/collector_runtime_configuration"};
  }

  rpc PostCollectorRuntimeConfiguration(Empty) returns (Empty) {
    option (google.api.http) = {
      post: "/v1/collector_runtime_configuration"
      body: "*"
    };
  }
}
