syntax = "proto3";

package central;

import "storage/resource_collection.proto";
import "storage/runtime_filters.proto";

option go_package = "./;central";

message RuntimeFilteringConfiguration {
  repeated storage.RuntimeFilter runtime_filters = 1;
  repeated storage.ResourceCollection resource_collections = 2;
}
